fase5 Teste de Hardware e outras atualizações
